--- a/src/exercise/3-jsx/03.html
+++ b/src/exercise/3-jsx/03.html
@@ -20,24 +20,43 @@
 
   <!-- 💡 permet de faire comprendre a Babel qu'il doit compiler ce fichier -->
   <script type="text/babel">
-    // 🦁 Remplace tout ceci par du JSX !
-    // 💡 <button id=...
-    const startButton = React.createElement(
-      'button',
-      {
-        id: 'start',
-        onClick: () => {
+
+    // -------------------------------------------------------------
+    // -------------------------------------------------------------
+
+    const startButton = (
+      <button
+        id="start"
+        onClick={() => {
           alert('Le bouton start à été cliqué !');
-        },
-      },
-      'Start'
+        }}
+      >
+        Start
+      </button>
     );
 
-    // 🦁 Remplace tout ceci par du JSX !
-    // 💡 <div>...
-    const elements = React.createElement('div', null, startButton);
+    // -------------------------------------------------------------
+    // -------------------------------------------------------------
+
+    const Message = ({author, children}) => {
+      return <p><b>{author}</b> : {children}</p>;
+    };
+
+    const elements = 
+    <div> 
+      {startButton}
+      <Message author= "Jean">Hello</Message>
+      <Message author= "Jacques">Hi</Message>
+      <h2>{Math.random()}</h2>
+      <p>{112+4}</p>
+      <span>{new Date().toDateString()}</span>
+    </div>;
+
+    // -------------------------------------------------------------
+    // -------------------------------------------------------------
 
     const root = ReactDOM.createRoot(document.querySelector('#root'));
     root.render(elements);
   </script>
+
 </html>
